fixed the overflow isse

--- a/assets/style.css
+++ b/assets/style.css
@@ -265,10 +265,10 @@ nav.active{
 
 .projects .contents .quote {
   position: relative;
-  max-width: 350px;
+  min-width: 330px;
   text-align: right;
   padding: 1rem;
-  margin-top: 4rem;
+  margin-top: 2.5rem;
 }
 
 .projects .contents .quote p span {
@@ -280,15 +280,15 @@ nav.active{
 .projects .contents .mark {
   position: absolute;
   background: transparent;
-  top: -35px;
-  left: -30px;
+  top: -20px;
+  left: -15px;
 }
 
 .projects .contents .mark-i {
   position: absolute;
   background: transparent;
-  bottom: -5px;
-  right: -40px;
+  bottom: 10px;
+  right: -10px;
   transform: rotate(180deg);
 }
 
@@ -419,6 +419,7 @@ footer p span.copy {
 
 footer .social .links {
   list-style: none;
+  padding: 0;
   margin-bottom: 0;
 }
 
